upgrade todo list demo init commander install bootstrap

--- a/src/styles/helper.scss
+++ b/src/styles/helper.scss
@@ -1,5 +1,5 @@
 /**
-* File name: C:\Training\vue-start-kit\src\styles\helper.scss
+* File name: vue-start-kit\src\styles\helper.scss
 * Created by Visual studio code
 * User: Danh Le / danh.danh20051995@gmail.com
 * Date: 2019-01-28 14:46:09
