--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,5 @@
 /**
-* File name: C:\Training\vue-start-kit\src\styles\app.scss
+* File name: vue-start-kit\src\styles\app.scss
 * Created by Visual studio code
 * User: Danh Le / danh.danh20051995@gmail.com
 * Date: 2019-01-28 09:54:26
@@ -8,6 +8,8 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','sans-serif';
+  -webkit-font-smoothing: antialiased;
 }
 
 html {
@@ -17,4 +19,8 @@ html {
 
 #app {
   min-height: 100vh;
+}
+
+#app-content {
+  padding-top: 40px;
 }
